added more offline files

--- a/page-depth-02/S03.html
+++ b/page-depth-02/S03.html
@@ -47,7 +47,7 @@
             <tr>
                 <td>
                     <!-- <p>  -->
-                        <a href="https://docs.google.com/spreadsheets/d/1glgff7va_cI2iYJje75s8Yf1QzUMy6RoP99uaI7gDuE/edit?usp=sharing"
+                        <a href="../Forms\Scheduler-S03 (Responses).xlsx"
                             target="_blank" class="cell-link">
                             See Schedule
                         </a>
@@ -57,7 +57,7 @@
 
                 <td>
                     <!-- <p>  -->
-                        <a href="https://forms.gle/xFMVwBwbcZ1LoWF5A" target="_blank" class="cell-link">
+                        <a href="../Forms\S03-form.pdf" target="_blank" class="cell-link">
                             Add Schedule
                         </a>
                     <!-- </p> -->
