--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
             margin: auto;
             width: 95%;
         }
+
+        .logo-hover:hover {
+            transform: translateY(-3px);
+            transition:  width 2s, height 2s, transform 2s;
+            /* border: 1px solid #00000018; */
+            /* border-radius: 50px; */
+        }
     </style>
 
 </head>
@@ -62,18 +69,32 @@
     <p align="center"><small><i>Academic Scheduling for CSE Students</i></small></p>
 
     <div class="parent-wrap">
-        <div style="background-color: rgba(0, 0, 0, 0);border-radius: 5px;">
-            <a href="Routine -Spring 2025(CSE) updated.pdf" download><img src="images\logo\logo (1).webp" height="120px"
-                    width="120px"></a>
-            <p style="text-align: center;margin-top: -15px;font-size: medium;">CSE<br>Routine</p>
+        <div style="background-color: rgba(0, 0, 0, 0);border-radius: 5px;margin-top: 15px;">
+            <a href="Routine -Spring 2025(CSE) updated.pdf" download><img src="images\logo\logo (1).webp" height="92px" width="92px"
+                class="logo-hover" class="logo-hover"></a>
+            <p style="text-align: center;margin-top: -1px;font-size: medium;">CSE<br>Routine</p>
         </div>
-        <div style="background-color: rgba(0, 0, 0, 0);border-radius: 5px;">
-            <a href="Semesters.html"><img src="images\logo\logo (2).webp" height="120px" width="120px"></a>
-            <p style="text-align: center;margin-top: -15px;font-size: medium;">Browser<br>Schedules</p>
+        <div style="background-color: rgba(0, 0, 0, 0);border-radius: 5px;margin-top: 15px;">
+            <a href="Semesters.html"><img src="images\logo\logo (4).webp" height="92px" width="92px"
+                    class="logo-hover"></a>
+            <p style="text-align: center;margin-top: -1px;font-size: medium;">Browser<br>Schedules</p>
         </div>
-        <div style="background-color: rgba(0, 0, 0, 0);border-radius: 5px;">
-            <a href="Events.html"><img src="images\logo\logo (3).webp" height="120px" width="120px"></a>
-            <p style="text-align: center;margin-top: -15px;font-size: medium;">Upcoming<br>Events</p>
+        <div style="background-color: rgba(0, 0, 0, 0);border-radius: 5px;margin-top: 15px;">
+            <a href="Events.html"><img src="images\logo\logo (5).webp" height="92px" width="92px"
+                class="logo-hover"
+                    class="logo-hover"></a>
+            <p style="text-align: center;margin-top: -1px;font-size: medium;">Upcoming<br>Events</p>
+        </div>
+        <div style="background-color: rgba(0, 0, 0, 0);border-radius: 5px;margin-top: 10px;">
+            <a href="Academic-Calendar-2025.pdf" download><img src="images\logo\logo (2).webp" height="100px"
+                    width="100px" class="logo-hover"
+                    style="box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.101);border-radius: 50px;"></a>
+            <p style="text-align: center;margin-top: -1px;font-size: medium;">Academic<br>Calendar</p>
+        </div>
+        <div style="background-color: rgba(0, 0, 0, 0);border-radius: 5px;margin-top: 15px;">
+            <a href="https://b1tranger.github.io/b1tranger.note-taking-website/" target="_blank"><img
+                    src="images\logo\logo (3).webp" height="92px" width="92px" class="logo-hover" style="box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.101);border-radius: 50px;"></a>
+            <p style="text-align: center;margin-top: -1px;font-size: medium;">Take<br>Notes</p>
         </div>
         <!-- <div style="background-color: rgba(0, 0, 0, 0.316);padding: 5%;border-radius: 5px;">
             <p>Hello</p>
