--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
 
 <body>
 
-    <!-- <div class="preloader" id="preloader">Loading...</div> -->
-    <!-- <div id="preloader"></div> -->
-    <!-- Preloader with GIF -->
+   
     <div id="preloader">
         <img src="images\preloader.gif" alt="Loading..." width="200">
     </div>
@@ -46,9 +44,13 @@
     <!-- TOP BAR -->
 
     <div class="topnav-1">
+        <a class="active-1" href="responsive-navbar-example.html">
+            <small>New Home Page</small>
+        </a>
         <a class="active-1" href="https://ouits-res.netlify.app/" target="_blank">
             <small>oUITS-Resources</small>
         </a>
+        
     </div>
 
 
