--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>oUITS-Scheduler Home</title>
+    <link rel="stylesheet" href="css\styles.css">
     <link rel="stylesheet" href="css\menu-bar.css">
     <!-- <link rel="stylesheet" href="css\styles.css"> -->
     <style>
@@ -37,8 +38,8 @@
         <div class="nav-container">
             <ul class="nav-links">
                 <li><a href="#" class="active">Home</a></li>
+                <li><a href="Semesters.html">Semesters</a></li>
                 <li><a href="Events.html">Events</a></li>
-                <li><a href="Semesters.html">Schedules</a></li>
                 <li><a href="https://ouits-res.netlify.app/" target="_blank">Resources</a></li>
                 <!-- <li><a href="contact.html">Contact</a></li> -->
             </ul>
@@ -57,8 +58,8 @@
 
         <!-- Example content -->
         <div class="content">
-            <h1 style="text-align: center;">Welcome to <br>UITS Academic Scheduler</h1>
-            <p style="text-align: center;">explore the features by clicking below</p>
+            <h1 style="text-align: center;">Welcome to <br>oUITS Scheduler</h1>
+            <!-- <p style="text-align: center;">quick downloads from below</p> -->
         </div>
 
         <div class="parent-wrap">
