--- a/page-depth-02/S03.html
+++ b/page-depth-02/S03.html
@@ -33,25 +33,33 @@
     <!-- TOP BAR -->
 
     <!-- Navigation Bar -->
-    <nav class="navbar">
+     <nav class="navbar">
         <div class="nav-container">
             <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="Events.html">Events</a></li>
-                <li><a href="#">Semester</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="../Semesters.html">Semesters</a></li>
+                <li><a href="../Events.html">Events</a></li>
                 <li><a href="https://ouits-res.netlify.app/" target="_blank">See Resources</a></li>
                 <!-- <li><a href="contact.html">Contact</a></li> -->
             </ul>
         </div>
     </nav>
 
-    <div class="logo-container">
+    <!-- <div class="logo-container">
         <div class="logo">
             <img src="../images\logo\logo (4).webp" height="80px" width="80px" style="border-radius: 50px;">
         </div>
         <div class="logo-text"></div>
-    </div>
+    </div> -->
+<!-- BOTTOM BAR "navbar" -->
 
+
+    <div class="navbar-5">
+        <font size="24"></font>
+        <p align=center style="color:rgba(255, 255, 255, 0.776);"><i>oUITS Scheduler</i></p>
+        </font>
+
+    </div>
     <!-- ----------------------------------------------------------------------- -->
 
 
