--- a/Events.html
+++ b/Events.html
@@ -41,20 +41,20 @@
         <div class="nav-container">
             <ul class="nav-links">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Events</a></li>
-                <li><a href="Semesters.html">Browser Schedules</a></li>
+                <li><a href="Semesters.html">Semesters</a></li>
+                <li><a href="#" class="active">Events</a></li>
                 <li><a href="https://ouits-res.netlify.app/" target="_blank">See Resources</a></li>
                 <!-- <li><a href="contact.html">Contact</a></li> -->
             </ul>
         </div>
     </nav>
 
-    <div class="logo-container">
+    <!-- <div class="logo-container">
         <div class="logo">
             <img src="images\logo\logo (5).webp" height="80px" width="80px" style="border-radius: 50px;">
         </div>
         <div class="logo-text"></div>
-    </div>
+    </div> -->
 
     <!-- BOTTOM BAR "navbar" -->
 
@@ -66,6 +66,16 @@
         </font>
 
     </div> -->
+<!-- BOTTOM BAR "navbar" -->
+
+
+    <div class="navbar-5">
+        <font size="24"></font>
+        <p align=center style="color:rgba(255, 255, 255, 0.776);"><i>oUITS Scheduler</i></p>
+        </font>
+
+    </div>
+
     <!-- ----------------------------------------------------------------------- -->
 
     <br> <br> <br> <br> <br> <br> <br> <br>
