--- a/Events.html
+++ b/Events.html
@@ -43,7 +43,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="Semesters.html">Semesters</a></li>
                 <li><a href="#" class="active">Events</a></li>
-                <li><a href="https://ouits-res.netlify.app/" target="_blank">See Resources</a></li>
+                <li><a href="https://ouits-res.netlify.app/" target="_blank">Resources</a></li>
                 <!-- <li><a href="contact.html">Contact</a></li> -->
             </ul>
         </div>
