--- a/page-depth-02/S06.html
+++ b/page-depth-02/S06.html
@@ -38,7 +38,7 @@
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="../Semesters.html">Semesters</a></li>
                 <li><a href="../Events.html">Events</a></li>
-                <li><a href="https://ouits-res.netlify.app/" target="_blank">See Resources</a></li>
+                <li><a href="https://ouits-res.netlify.app/" target="_blank">Resources</a></li>
                 <!-- <li><a href="contact.html">Contact</a></li> -->
             </ul>
         </div>
