--- a/index.html
+++ b/index.html
@@ -97,6 +97,14 @@
 
         </div>
     </div>
+
+    <div class="navbar-5">
+        <font size="24"></font>
+        <p align=center style="color:rgba(255, 255, 255, 0.776);"><i>oUITS Scheduler</i></p>
+        </font>
+
+    </div>
+
 </body>
 
 </html>
