added Go Home button in note pages

--- a/Note/LocalStorage/index-local.html
+++ b/Note/LocalStorage/index-local.html
@@ -16,11 +16,12 @@
         </div>
         <div class="button-container">
             <!-- <button class="action-button"> -->
-                <a class="button-link" href="../index.html" style="color: white;text-decoration: none;">Change
+                <a class="button-link" href="../SessionStorage/index-session.html" style="color: white;text-decoration: none;">Change
                     to SessionStorage</a>
                 <!-- </button> -->
             <button id="download-notes" class="action-button">Download Notes</button>
             <button id="clear-notes" class="action-button">Clear All</button>
+            <a class="action-button2" href="../../index.html" style="text-decoration: none;color: white;text-align: center;">Go Home</a>
         </div>
     </header>
 
