--- a/Note/SessionStorage/index-session.html
+++ b/Note/SessionStorage/index-session.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>note-taking-website</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index-session.css">
 
 </head>
 
@@ -20,12 +20,13 @@
         </div>
         <div class="button-container">
             <!-- <button class="action-button"> -->
-            <a class="button-link" href="LocalStorage\index-local.html"
+            <a class="button-link" href="../LocalStorage\index-local.html"
                 style="color: white;text-decoration: none;">Change
                 to LocalStorage</a>
             <!-- </button> -->
             <button id="download-notes" class="action-button">Download Notes</button>
             <button id="clear-notes" class="action-button">Clear All</button>
+             <a class="action-button2" href="../../index.html" style="text-decoration: none;color: white;text-align: center;">Go Home</a>
         </div>
     </header>
 
@@ -40,7 +41,7 @@
 
     <div id="notification" class="notification">Notes downloaded successfully!</div>
 
-    <script src="index.js"></script>
+    <script src="index-session.js"></script>
 </body>
 
 </html>
