--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <p style="text-align: center;margin-top: -1px;font-size: medium;">Academic<br>Calendar</p>
             </div>
             <div style="background-color: rgba(0, 0, 0, 0);border-radius: 5px;margin-top: 15px;">
-                <a href="https://b1tranger.github.io/b1tranger.note-taking-website/" target="_blank"><img
+                <a href="Note\SessionStorage\index-session.html"><img
                         src="images\logo\logo (3).webp" height="92px" width="92px" class="logo-hover"
                         style="box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.101);border-radius: 50px;"></a>
                 <p style="text-align: center;margin-top: -1px;font-size: medium;">Take<br>Notes</p>
