working on a new form page

--- a/Forms/Form Input Page.html
+++ b/Forms/Form Input Page.html
@@ -14,7 +14,7 @@
         body {
             background-color: rgba(0, 0, 0, 0.742);
             max-width: 600px;
-            min-width: 500px;
+            min-width: 400px;
         }
 
         h1,
@@ -53,6 +53,7 @@
 
         .div-theme {
             box-shadow: black;
+            
         }
 
         .div-theme2 {
@@ -77,7 +78,7 @@
     </style>
 </head>
 
-<body>
+<body style="margin: auto;">
     <h1 align="center"><u>UCAM Registration Form</u></h1>
 
     <br>
