--- a/Forms/form_with_full_page_results.html
+++ b/Forms/form_with_full_page_results.html
@@ -193,7 +193,7 @@
             
             <div class="form-group">
                 <label for="subject">Subject</label>
-                <select id="subject" name="subject">
+                <select id="subject" name="subject" required>
                     <option value="">-- Select a Subject --</option>
                     <option value="general">General Inquiry</option>
                     <option value="support">Technical Support</option>
