--- a/page-depth-02/S01.html
+++ b/page-depth-02/S01.html
@@ -87,7 +87,7 @@
 
                 <td>
                     <!-- <p>  -->
-                    <a href="https://forms.gle/B3SJcKMAc9ybHLSP6" target="_blank" class="cell-link">
+                    <a href="../Forms/form_with_full_page_results.html" class="cell-link">
                         Add Schedule
                     </a>
                     <!-- </p> -->
