updated some things

--- a/Forms/form_with_full_page_results.html
+++ b/Forms/form_with_full_page_results.html
@@ -174,10 +174,11 @@
 </head>
 <body>
     <div class="container">
-        <h1>Contact Information</h1>
+        <h1>Add to Schedule</h1>
+        <p style="text-align: center;">Crowdsourced Task Scheduler for UITS 3rd semester<br><br></p>
         <form id="contactForm">
             <div class="form-group">
-                <label for="name">Full Name</label>
+                <label for="section">Section</label>
                 <input type="text" id="name" name="name" required>
             </div>
             
