--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
         <!-- Example content -->
         <div class="content">
-            <h1 style="text-align: center;">Welcome to <br>oUITS Scheduler</h1>
+            <h1 style="text-align: center;">Academic Scheduler</h1>
             <!-- <p style="text-align: center;">quick downloads from below</p> -->
         </div>
 
@@ -86,8 +86,8 @@
                 <p style="text-align: center;margin-top: -1px;font-size: medium;">Academic<br>Calendar</p>
             </div>
             <div style="background-color: rgba(0, 0, 0, 0);border-radius: 5px;margin-top: 15px;">
-                <a href="Note\SessionStorage\index-session.html"><img
-                        src="images\logo\logo (3).webp" height="92px" width="92px" class="logo-hover"
+                <a href="Note\SessionStorage\index-session.html"><img src="images\logo\logo (3).webp" height="92px"
+                        width="92px" class="logo-hover"
                         style="box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.101);border-radius: 50px;"></a>
                 <p style="text-align: center;margin-top: -1px;font-size: medium;">Take<br>Notes</p>
             </div>
@@ -99,10 +99,15 @@
     </div>
 
     <div class="navbar-5">
+
         <font size="24"></font>
         <p align=center style="color:rgba(255, 255, 255, 0.776);"><i>oUITS Scheduler</i></p>
         </font>
 
+    </div>
+
+    <div class="bottom-logo">
+        <img src="Social-Preview-bototm1.webp" height="78px">
     </div>
 
 </body>
