--- a/Semesters.html
+++ b/Semesters.html
@@ -42,12 +42,12 @@
         </div>
     </nav>
 
-    <!-- <div class="logo-container">
+    <div class="logo-container">
         <div class="logo">
-            <img src="images\logo\logo (4).webp" height="80px" width="80px" style="border-radius: 50px;">
+            <img src="Social-Preview.webp" height="80px" width="80px" style="border-radius: 50px;">
         </div>
         <div class="logo-text"></div>
-    </div> -->
+    </div>
 
     <!-- BOTTOM BAR "navbar" -->
 
